<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="learn_more">Learn more</string>
    <string name="prefs_search_engine">Search engine</string>
    <string name="prefs_autofill">Autofill forms</string>
    <string name="autofill_profiles_title">Addresses</string>
    <string name="autofill_credit_cards_title">Credit cards</string>
    <string name="autofill_create_profile">Add address</string>
    <string name="autofill_create_credit_card">Add credit card</string>
    <string name="autofill_wallet_title">Show addresses and credit cards from Google Wallet</string>
    <string name="prefs_saved_passwords">Save passwords</string>
    <string name="password_entry_editor_title">Edit saved name/password or exception</string>
    <string name="homepage_default_title">Default</string>
    <string name="navigation_error_title">Navigation error suggestions</string>
    <string name="navigation_error_summary">Show suggestions when a web address does not resolve or a connection cannot be made</string>
    <string name="search_suggestions_title">Search and URL suggestions</string>
    <string name="search_suggestions_summary">Use a prediction service to show related queries and popular websites as you type in the address bar</string>
    <string name="network_predictions_title">Prefetch page resources</string>
    <string name="network_predictions_summary">Improve page load performance</string>
    <string name="network_prediction_wifi_only_value">network_prediction_wifi_only</string>
    <string name="contextual_search_title">Touch to Search</string>
    <string name="crash_dump_upload_title">Usage and crash reports</string>
    <string name="crash_dump_never_upload_value">crash_dump_never_upload</string>
    <string name="do_not_track_title">‘Do Not Track’</string>
    <string name="clear_browsing_data_title">Clear browsing data</string>
    <string name="usage_and_crash_reports_title">Usage and crash reports</string>
    <string name="prefs_accessibility">Accessibility</string>
    <string name="prefs_content_settings">Site settings</string>
    <string name="all_sites">All sites</string>
    <string name="allow_third_party_cookies_title">Allow third-party cookies</string>
    <string name="allow_third_party_cookies_summary">Third-party websites can save and read cookie data</string>
    <string name="website_settings_site_category">Site</string>
    <string name="website_settings_usage_category">Usage</string>
    <string name="website_settings_permissions_category">Permissions</string>
    <string name="website_reset">Clear &amp; reset</string>
    <string name="webstorage_clear_data_dialog_title">Clear stored data</string>
    <string name="webstorage_clear_data_dialog_message">All local data stored by this website, including cookies, will be deleted.</string>
    <string name="webstorage_clear_data_dialog_ok_button">Clear all</string>
    <string name="protected_content_learn_more_url">https://support.google.com/chrome/?p=mobile_protected_content</string>
    <string name="google_translate">Google Translate</string>
    <string name="website_settings_storage">Storage</string>
    <string name="reduce_data_usage_description">When this feature is turned on, Chrome will use Google servers to compress pages you visit before downloading them. SSL and incognito pages will not be included.</string>
    <string name="reduce_data_usage_learn_url">https://support.google.com/chrome/?p=mobile_bandwidth</string>
    <string name="safe_browsing_description">Chrome’s Safe Browsing system will also be used to detect malicious pages and protect you from phishing, malware, and harmful downloads.</string>
    <string name="data_reduction_caveats_description">This feature may interfere with access to premium data services provided by your carrier.</string>
    <string name="data_reduction_experiment_description">If you enable this feature, you will be part of an experiment that proxies HTTPS pages through Google servers.</string>
    <string name="data_reduction_experiment_link_url" />
    <string name="prefs_about_chrome">About Chrome</string>
    <string name="application_version_title">Application version</string>
    <string name="os_version_title">Operating system</string>
    <string name="blink_version_title">Blink version</string>
    <string name="javascript_version_title">JavaScript version</string>
    <string name="executable_path_title">Executable path</string>
    <string name="profile_path_title">Profile path</string>
    <string name="account_management_title">Accounts</string>
    <string name="account_management_go_incognito_text">Go incognito to browse privately or sign in temporarily</string>
    <string name="account_management_parental_settings">Parental Settings</string>
    <string name="account_management_child_content_title">Content</string>
    <string name="account_management_child_safe_search_title">SafeSearch</string>
    <string name="legal_information_title">Legal information</string>
    <string name="sign_in_accounts_message">You’re signed in to the following Google Accounts. Add or remove accounts in Android settings.</string>
    <string name="sign_in_accounts_message_child">You’re signed in to the following Google Account.</string>
    <string name="sync_data_types">Data types</string>
    <string name="sync_everything_pref">Sync everything</string>
    <string name="sync_autofill">Autofill</string>
    <string name="sync_bookmarks">Bookmarks</string>
    <string name="sync_history">History</string>
    <string name="sync_passwords">Passwords</string>
    <string name="sync_recent_tabs">Open tabs</string>
    <string name="sync_encryption">Encryption</string>
    <string name="sync_manage_data">Manage synced data</string>
    <string name="sync_custom_passphrase">Only someone with your passphrase can read your encrypted data. This passphrase is not sent to or stored by Google. If you forget your passphrase, you will need to reset sync.</string>
    <string name="sync_enter_custom_passphrase_hint">Passphrase</string>
    <string name="sync_enter_custom_passphrase_hint_confirm">Confirm passphrase</string>
    <string name="oma_download_name_label">Name:</string>
    <string name="oma_download_vendor_label">Vendor:</string>
    <string name="oma_download_size_label">Size:</string>
    <string name="oma_download_type_label">Type:</string>
    <string name="oma_download_description_label">Description:</string>
    <string name="options_startup_pages_placeholder">Enter URL...</string>
</resources>