<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/application_version_title" android:key="application_version" />
    <Preference android:title="@string/os_version_title" android:key="os_version" />
    <Preference android:title="@string/blink_version_title" android:key="webkit_version" />
    <Preference android:title="@string/javascript_version_title" android:key="javascript_version" />
    <Preference android:title="@string/executable_path_title" android:key="executable_path" />
    <Preference android:title="@string/profile_path_title" android:key="profile_path" />
    <Preference android:title="@string/legal_information_title" android:key="legal_information" android:fragment="org.chromium.chrome.browser.preferences.LegalInformationPreferences" />
</PreferenceScreen>