<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.chromium.chrome.browser.preferences.ChromeSwitchPreference android:key="autofill_switch" android:summaryOn="@string/text_on" android:summaryOff="@string/text_off" />
    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference android:title="@string/autofill_wallet_title" android:key="autofill_wallet" />
    <org.chromium.chrome.browser.preferences.PreferenceCategoryWithButton android:enabled="true" android:title="@string/autofill_profiles_title" android:key="autofill_profiles" android:contentDescription="@string/autofill_create_profile" android:fragment="org.chromium.chrome.browser.preferences.autofill.AutofillProfileEditor" />
    <org.chromium.chrome.browser.preferences.PreferenceCategoryWithButton android:enabled="true" android:title="@string/autofill_credit_cards_title" android:key="autofill_credit_cards" android:contentDescription="@string/autofill_create_credit_card" android:fragment="org.chromium.chrome.browser.preferences.autofill.AutofillCreditCardEditor" />
</PreferenceScreen>