<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:chrome="http://schemas.android.com/apk/res-auto">
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:title="@string/reduce_data_usage_description" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:title="@string/safe_browsing_description" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:title="@string/data_reduction_caveats_description" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:title="@string/data_reduction_experiment_description" android:key="data_reduction_experiment_text" />
    <org.chromium.chrome.browser.preferences.HyperlinkPreference android:title="@string/learn_more" android:key="data_reduction_experiment_link" chrome:url="@string/data_reduction_experiment_link_url" chrome:imitateWebLink="true" />
    <org.chromium.chrome.browser.preferences.HyperlinkPreference android:title="@string/learn_more" android:key="data_reduction_learn_more" chrome:url="@string/reduce_data_usage_learn_url" chrome:imitateWebLink="true" />
</PreferenceScreen>