<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/account_management_title" android:order="0" />
    <org.chromium.chrome.browser.preferences.ChromeSwitchPreference android:key="sign_out_switch" android:summary="@string/sign_in_accounts_message" android:order="1" app:dontUseSummaryAsTitle="true" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:title="@string/sign_in_accounts_message_child" android:key="sign_in_child_message" android:order="2" />
    <org.chromium.chrome.browser.preferences.ChromeBasePreference android:icon="@drawable/plus" android:key="add_account" android:order="1000" />
    <PreferenceCategory android:key="not_you" android:order="1001" />
    <org.chromium.chrome.browser.preferences.ChromeBasePreference android:icon="@drawable/account_management_incognito" android:title="@string/account_management_go_incognito_text" android:key="go_incognito" android:order="1002" />
    <PreferenceCategory android:title="@string/account_management_parental_settings" android:key="parental_settings" android:order="1003" />
    <Preference android:key="parent_accounts" android:order="1004" />
    <Preference android:title="@string/account_management_child_content_title" android:key="child_content" android:order="1005" />
    <Preference android:title="@string/account_management_child_safe_search_title" android:key="child_safe_search" android:order="1006" />
</PreferenceScreen>