<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/website_settings_site_category" android:key="site_heading" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:key="site_title" />
    <PreferenceCategory android:title="@string/website_settings_usage_category" android:key="site_usage" />
    <org.chromium.chrome.browser.preferences.website.ClearWebsiteStorage android:title="@string/webstorage_clear_data_dialog_title" android:key="clear_data" android:widgetLayout="@layout/clear_storage" android:dialogMessage="@string/webstorage_clear_data_dialog_message" android:positiveButtonText="@string/webstorage_clear_data_dialog_ok_button" android:negativeButtonText="@string/cancel" />
    <PreferenceCategory android:title="@string/website_settings_permissions_category" android:key="site_permissions" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="cookies_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="camera_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="microphone_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="popup_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="images_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="javascript_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="location_access_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="push_notifications_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="midi_sysex_permission_list" />
    <org.chromium.chrome.browser.preferences.ChromeBaseListPreference android:key="protected_media_identifier_permission_list" />
    <org.chromium.chrome.browser.preferences.ButtonPreference android:title="@string/website_reset" android:key="reset_site_button" />
</PreferenceScreen>