<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@id/confirm_oma_download" android:stretchColumns="1" style="@style/AlertDialogContent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <TextView android:textColor="@android:color/black" android:gravity="start" android:padding="3.0dip" android:text="@string/oma_download_name_label" />
        <TextView android:textColor="@android:color/black" android:gravity="start" android:id="@id/oma_download_name" android:padding="3.0dip" />
    </TableRow>
    <TableRow>
        <TextView android:textColor="@android:color/black" android:gravity="start" android:padding="3.0dip" android:text="@string/oma_download_vendor_label" />
        <TextView android:textColor="@android:color/black" android:gravity="start" android:id="@id/oma_download_vendor" android:padding="3.0dip" />
    </TableRow>
    <TableRow>
        <TextView android:textColor="@android:color/black" android:gravity="start" android:padding="3.0dip" android:text="@string/oma_download_size_label" />
        <TextView android:textColor="@android:color/black" android:gravity="start" android:id="@id/oma_download_size" android:padding="3.0dip" />
    </TableRow>
    <TableRow>
        <TextView android:textColor="@android:color/black" android:gravity="start" android:padding="3.0dip" android:text="@string/oma_download_type_label" />
        <TextView android:textColor="@android:color/black" android:gravity="start" android:id="@id/oma_download_type" android:padding="3.0dip" />
    </TableRow>
    <TableRow>
        <TextView android:textColor="@android:color/black" android:gravity="start" android:padding="3.0dip" android:text="@string/oma_download_description_label" />
        <TextView android:textColor="@android:color/black" android:gravity="start" android:id="@id/oma_download_description" android:padding="3.0dip" />
    </TableRow>
</TableLayout>