<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="ifContentScrolls"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/AlertDialogContent">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="@string/sync_custom_passphrase" />
        <org.chromium.chrome.browser.widget.AlertDialogEditText android:id="@id/passphrase" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/sync_enter_custom_passphrase_hint" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionNext" />
        <org.chromium.chrome.browser.widget.AlertDialogEditText android:id="@id/confirm_passphrase" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/sync_enter_custom_passphrase_hint_confirm" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionDone" />
    </LinearLayout>
</ScrollView>