<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/PreferenceLayout">
            <TextView android:id="@id/homepage_switch_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/PreferenceTitle" />
            <org.chromium.chrome.browser.widget.ChromeSwitchCompat android:id="@id/homepage_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/text_on" android:textOff="@string/text_off" />
        </LinearLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="?android:listDivider" android:scaleType="fitXY" android:contentDescription="@null" />
        <EditText android:textAppearance="?android:textAppearanceMedium" android:id="@id/custom_uri" android:nextFocusLeft="@id/custom_uri" android:nextFocusUp="@id/custom_uri" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:hint="@string/options_startup_pages_placeholder" android:singleLine="true" android:inputType="textUri" />
        <CheckBox android:id="@id/default_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/homepage_default_title" />
    </LinearLayout>
</ScrollView>