<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:title="@string/password_entry_editor_title">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/password_entry_editor_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/password_entry_editor_url" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:minHeight="5.0dip" android:layout_weight="1.0" />
        <View android:background="?android:dividerHorizontal" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerVertical" android:showDividers="middle" android:dividerPadding="0.0dip" style="?android:attr/buttonBarStyle">
            <Button android:id="@id/password_entry_editor_delete" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:id="@id/password_entry_editor_cancel" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>