<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:icon="@drawable/settings_all_sites" android:title="@string/all_sites" android:key="website_settings" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="cookies" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="device_location" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="camera" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="microphone" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="push_notifications" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="images" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="javascript" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="popups" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="fullscreen" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:key="protected_content" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
    <Preference android:icon="@drawable/settings_translate" android:title="@string/google_translate" android:key="translate" android:fragment="org.chromium.chrome.browser.preferences.website.TranslatePreferences" />
    <Preference android:icon="@drawable/settings_storage" android:title="@string/website_settings_storage" android:key="use_storage" android:fragment="org.chromium.chrome.browser.preferences.website.WebsitePreferences" />
</PreferenceScreen>